--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "private": true,
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "rm -rf dist && parcel src/manifest.json --no-hmr",
-        "build": "rm -rf dist && parcel build src/manifest.json --experimental-scope-hoisting && cd dist && zip -r9 -FS ../YaMusic.zip *"
+        "dev": "gulp dev",
+        "build": "gulp build"
     },
     "repository": {
         "type": "git",
@@ -19,11 +19,25 @@
     },
     "homepage": "https://github.com/keupoz/YaMusic-Integration-Extension#readme",
     "devDependencies": {
-        "@types/chrome": "0.0.93",
-        "@types/wicg-mediasession": "^1.0.3",
-        "parcel-bundler": "^1.12.4",
-        "parcel-plugin-web-extension": "^1.6.1",
-        "typescript": "^3.7.5"
+        "@types/chrome": "0.0.122",
+        "@types/gulp": "^4.0.6",
+        "@types/gulp-if": "0.0.33",
+        "@types/gulp-terser": "^1.2.1",
+        "@types/gulp-zip": "^4.0.1",
+        "@types/through2": "^2.0.36",
+        "@types/vinyl": "^2.0.4",
+        "@types/wicg-mediasession": "^1.0.4",
+        "del": "^5.1.0",
+        "gulp": "^4.0.2",
+        "gulp-if": "^3.0.0",
+        "gulp-terser": "^1.2.1",
+        "gulp-typescript": "^6.0.0-alpha.1",
+        "gulp-zip": "^5.0.2",
+        "plugin-error": "^1.0.1",
+        "through2": "^4.0.2",
+        "ts-node": "^8.10.2",
+        "tslint": "^6.1.2",
+        "typescript": "^3.9.7"
     },
     "dependencies": {}
 }
