--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
     "compilerOptions": {
         "esModuleInterop": true,
-        "lib": [
-            "dom",
-            "es2017"
-        ],
+        "lib": ["DOM", "ES6"],
         "moduleResolution": "node",
         "noImplicitAny": true,
         "noImplicitReturns": true,
@@ -13,6 +10,6 @@
         "noUnusedParameters": true,
         "resolveJsonModule": true,
         "strict": true,
-        "target": "es5"
+        "target": "ES6"
     }
 }
