--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,10 +10,10 @@
     "minimum_chrome_version": "73",
 
     "icons": {
-        "16": "icons/16.png",
-        "32": "icons/32.png",
-        "48": "icons/48.png",
-        "128": "icons/128.png"
+        "16": "assets/icons/16.png",
+        "32": "assets/icons/32.png",
+        "48": "assets/icons/48.png",
+        "128": "assets/icons/128.png"
     },
 
     "browser_action": {
