--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/keupoz/YaMusic-Integration-Extension#readme",
     "devDependencies": {
+        "@keupoz/typescript-config": "^1.1.8",
         "@rollup/plugin-typescript": "^8.2.1",
         "@types/chrome": "^0.0.135",
         "@types/gulp": "^4.0.8",
@@ -35,8 +36,8 @@
         "rollup": "^2.45.2",
         "rollup-plugin-terser": "^7.0.2",
         "through2": "^4.0.2",
-        "ts-node": "^9.1.1",
         "tslint": "^6.1.3",
-        "typescript": "^4.2.4"
+        "typescript": "^4.2.4",
+        "vinyl": "^2.2.1"
     }
 }
