--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,3 @@
 {
-    "compilerOptions": {
-        "esModuleInterop": true,
-        "lib": ["DOM", "ES6"],
-        "moduleResolution": "node",
-        "noImplicitAny": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "resolveJsonModule": true,
-        "strict": true,
-        "target": "ES6"
-    }
+    "extends": "@keupoz/typescript-config/tsconfig.json"
 }
