--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,21 @@
 {
-    "extends": "@keupoz/typescript-config/tsconfig.json"
+  "compilerOptions": {
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "lib": ["ESNext", "DOM"],
+    "moduleResolution": "Node",
+    "strict": true,
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "noEmit": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "skipLibCheck": true,
+    "types": ["vite/client", "@crxjs/vite-plugin/client", "@types/chrome"]
+  },
+  "include": ["src", "manifest.ts", "vite.config.ts"]
 }
